Project

General

Profile

Actions

Bug #13710

closed

Time zone info lost after doing +/- on time object that loaded from dumped string.

Bug #13710: Time zone info lost after doing +/- on time object that loaded from dumped string.

Added by Cantin (Cantin Xu) about 9 years ago. Updated about 9 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-darwin15]
[ruby-core:81892]

Description

See script below.

Time#zone return nil after doing +/- on instance b (which is loaded from dumped string)

a = Marshal.dump(Time.now)
b = Marshal.load(a)
p b.zone  # CST
p (b + 1).zone # nil
p (b - 1).zone # nil
p (Time.now + 1).zone # CST

Updated by nobu (Nobuyoshi Nakada) about 9 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset trunk|r59258.


time.c: preserve marshalled timezone

  • time.c (time_add): preserve timezone name restored by Marshal.
    [ruby-core:81892] [Bug #13710]

  • time.c (time_mload): reset localtime if having timezone.

Actions

Also available in: PDF Atom